--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,26 +10,18 @@ jobs:
       - uses: docker/setup-buildx-action@v3.0.0
       - name: Start containers
         run: docker-compose up --build --force-recreate --detach
-      - name: Verify no-ssl success
+      - name: Verify all tests completed successfully
         run: |
           set -x
-          name=$(docker-compose ps | grep test | grep -v ssl | awk '{print $1}')
-          rc=$(docker wait "${name}")
-          if [ "${rc}" != "0" ]; then
-              echo "test failed:"
-              docker logs "${name}"
-              exit 1
-          fi
-      - name: Verify ssl success
-        run: |
-          set -x
-          name=$(docker-compose ps | grep test-ssl | awk '{print $1}')
-          rc=$(docker wait "${name}")
-          if [ "${rc}" != "0" ]; then
-              echo "test-ssl failed:"
-              docker logs "${name}"
-              exit 1
-          fi
+          for testname in test-curl-nossl test-curl-ssl test-utils-nossl test-utils-ssl; do
+            name=$(docker-compose ps | grep ${testname} | awk '{print $1}')
+            rc=$(docker wait "${name}")
+            if [ "${rc}" != "0" ]; then
+                echo "test failed:"
+                docker logs "${name}"
+                exit 1
+            fi
+          done
       - name: Logs
         if: always()
         run: docker-compose logs
